--- a/about/index.html
+++ b/about/index.html
@@ -11,49 +11,49 @@
     <title>MAX MOISEEV | About</title>
     <!-- SEO Метатеги -->
     <meta name="description" content="About Max Moiseev, a contemporary artist. Learn about his journey, exhibitions, and artistic process.">
-<meta name="keywords" content="Max Moiseev, about, contemporary artist, exhibitions">
-<meta name="author" content="Max Moiseev">
-<meta property="og:title" content="About">
-<meta property="og:description" content="Learn about Max Moiseev, his artistic journey, and exhibitions.">
-<meta property="og:image" content="https://maxmoiseev.art/images/profile-image.jpg">
-<meta property="og:url" content="https://maxmoiseev.art/about.html">
-<meta property="og:type" content="website">
+    <meta name="keywords" content="Max Moiseev, about, contemporary artist, exhibitions">
+    <meta name="author" content="Max Moiseev">
+    <meta property="og:title" content="About">
+    <meta property="og:description" content="Learn about Max Moiseev, his artistic journey, and exhibitions.">
+    <meta property="og:image" content="https://maxmoiseev.art/images/profile-image.jpg">
+    <meta property="og:url" content="https://maxmoiseev.art/about">
+    <meta property="og:type" content="website">
     <!-- Favicon -->
-<link rel="icon" type="image/png" href="images/logo.png" sizes="32x32">
-<!-- Apple Touch Icon (для iOS) -->
-<link rel="apple-touch-icon" href="images/logo.png">
-<!-- Microsoft Windows Tiles -->
-<meta name="msapplication-TileImage" content="images/logo.png">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/png" href="../images/logo.png" sizes="32x32">
+    <!-- Apple Touch Icon (для iOS) -->
+    <link rel="apple-touch-icon" href="../images/logo.png">
+    <!-- Microsoft Windows Tiles -->
+    <meta name="msapplication-TileImage" content="../images/logo.png">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <!-- Шапка профиля -->
-   <header>
-    <div class="profile">
-        <h1 class="name">
-           <a href="index.html">
-                <span class="first-name">MAX MOISEEV</span><br>
-            </a>
-        </h1>
-    </div>
+    <header>
+        <div class="profile">
+            <h1 class="name">
+                <a href="/">
+                    <span class="first-name">MAX MOISEEV</span><br>
+                </a>
+            </h1>
+        </div>
         <!-- Кнопка меню (логотип) -->
-        <img id="menu-toggle" src="images/logo.svg" alt="Menu" class="logo">
+        <img id="menu-toggle" src="../images/logo.svg" alt="Menu" class="logo">
     </header>
 
-     <!-- Выпадающее меню -->
+    <!-- Выпадающее меню -->
     <nav id="menu" class="hidden">
         <ul>
-            <li><a href="paintings.html">PAINTINGS</a></li>
-            <li><a href="digital.html">DIGITAL</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="/paintings">PAINTINGS</a></li>
+            <li><a href="/digital">DIGITAL</a></li>
+            <li><a href="/about">ABOUT</a></li>
+            <li><a href="/contact">CONTACT</a></li>
         </ul>
     </nav>
 
     <!-- Основное содержимое -->
     <main class="about">
         <section class="bio">
-            <img src="images/profile.jpg" alt="Max Moiseev" class="profile-image">
+            <img src="../images/profile.jpg" alt="Max Moiseev" class="profile-image">
             <div class="description">
                 <h2>About</h2>
                 <p>Maksim Moiseev (b. 1989, Mogilev, Belarus) is an abstract artist exploring the field of consciousness through painting and digital media. He graduated from Vitebsk University in 2015 and has been living and working in Batumi, Georgia, since 2022.
@@ -72,22 +72,21 @@ His work engages in a dialogue with contemporary abstract practices, exploring n
                 <li>Group exhibition Art-Minsk (2021, Minsk, Belarus)</li>
             </ul>
         </section>
-        
     </main>
 
     <footer>
         <small>© 2014-2025 MAX MOISEEV. All rights reserved.</small>
-        </footer>
+    </footer>
 
-        <div class="social-links">
-    <a href="https://www.instagram.com/maxmosesone" target="_blank" rel="noopener noreferrer">
-        <i class="fab fa-instagram"></i>
-    </a>
-    <a href="https://linktr.ee/maxmosesone?fbclid=PAZXh0bgNhZW0CMTEAAad2bTQij4E7bJmJhkWW0l4M9xgKVTh91W9WlkZ6QBvSur4Ix9OWcSX6vDFsxw_aem_GtbD1BEmOCTVh9CmEd-nTA" target="_blank" rel="noopener noreferrer">
-        <img src="images/linktree-logo.svg" alt="Linktree Logo" class="social-icon">
-    </a>
-</div>
+    <div class="social-links">
+        <a href="https://www.instagram.com/maxmosesone" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://linktr.ee/maxmosesone?fbclid=PAZXh0bgNhZW0CMTEAAad2bTQij4E7bJmJhkWW0l4M9xgKVTh91W9WlkZ6QBvSur4Ix9OWcSX6vDFsxw_aem_GtbD1BEmOCTVh9CmEd-nTA" target="_blank" rel="noopener noreferrer">
+            <img src="../images/linktree-logo.svg" alt="Linktree Logo" class="social-icon">
+        </a>
+    </div>
 
-    <script src="js/scripts.js"></script>
+    <script src="../js/scripts.js"></script>
 </body>
 </html>
