--- a/digital/index.html
+++ b/digital/index.html
@@ -17,37 +17,37 @@
     <meta property="og:title" content="Digital">
     <meta property="og:description" content="Explore digital artworks by Max Moiseev, including the Simulation series (2018-2025).">
     <meta property="og:image" content="https://maxmoiseev.art/images/Simulation_V.jpg">
-    <meta property="og:url" content="https://maxmoiseev.art/digital.html">
+    <meta property="og:url" content="https://maxmoiseev.art/digital">
     <meta property="og:type" content="website">
     <!-- Favicon -->
-<link rel="icon" type="image/png" href="images/logo.png" sizes="32x32">
-<!-- Apple Touch Icon (для iOS) -->
-<link rel="apple-touch-icon" href="images/logo.png">
-<!-- Microsoft Windows Tiles -->
-<meta name="msapplication-TileImage" content="images/logo.png">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/png" href="../images/logo.png" sizes="32x32">
+    <!-- Apple Touch Icon (для iOS) -->
+    <link rel="apple-touch-icon" href="../images/logo.png">
+    <!-- Microsoft Windows Tiles -->
+    <meta name="msapplication-TileImage" content="../images/logo.png">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <!-- Шапка профиля -->
     <header>
         <div class="profile">
             <h1 class="name">
-                <a href="index.html">
+                <a href="/">
                     <span class="first-name">MAX MOISEEV</span><br>
                 </a>
             </h1>
         </div>
         <!-- Кнопка меню (логотип) -->
-        <img id="menu-toggle" src="images/logo.svg" alt="Menu" class="logo">
+        <img id="menu-toggle" src="../images/logo.svg" alt="Menu" class="logo">
     </header>
 
     <!-- Выпадающее меню -->
     <nav id="menu" class="hidden">
         <ul>
-            <li><a href="paintings.html">PAINTINGS</a></li>
-            <li><a href="digital.html">DIGITAL</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="/paintings">PAINTINGS</a></li>
+            <li><a href="/digital">DIGITAL</a></li>
+            <li><a href="/about">ABOUT</a></li>
+            <li><a href="/contact">CONTACT</a></li>
         </ul>
     </nav>
 
@@ -55,7 +55,7 @@
     <main class="gallery">
         <section class="work-item">
             <div class="frame">
-                <img src="images/Simulation_V.jpg" alt="Simulation_V">
+                <img src="../images/Simulation_V.jpg" alt="Simulation_V">
                 <div class="info">
                     <h3>Simulation V, 2025</h3>
                 </div>
@@ -63,10 +63,10 @@
         </section>
 
         <section class="work-item has-gallery" 
-                data-images='["images/Simulation_IV.jpg", "images/Simulation_IV.I.jpg", "images/Simulation_IV.II.jpg"]' 
+                data-images='["../images/Simulation_IV.jpg", "../images/Simulation_IV.I.jpg", "../images/Simulation_IV.II.jpg"]' 
                 data-captions='["Simulation IV, 2025", "Simulation IV.I, 2025", "Simulation IV.II, 2025"]'>
             <div class="frame">
-                <img src="images/Simulation_IV.jpg" alt="Simulation_IV">
+                <img src="../images/Simulation_IV.jpg" alt="Simulation_IV">
                 <div class="info">
                     <h3>Simulation IV, 2025</h3>
                 </div>
@@ -76,10 +76,10 @@
         </section>
 
         <section class="work-item has-gallery" 
-                data-images='["images/Simulation_III.jpg", "images/Simulation_III.I.jpg", "images/Simulation_III_WB.jpg", "images/Simulation_III.II.jpg"]' 
+                data-images='["../images/Simulation_III.jpg", "../images/Simulation_III.I.jpg", "../images/Simulation_III_WB.jpg", "../images/Simulation_III.II.jpg"]' 
                 data-captions='["Simulation III, 2025", "Simulation III.I, 2025", "Simulation III, WB, 2025", "Simulation III.II, 2025"]'>
             <div class="frame">
-                <img src="images/Simulation_III.jpg" alt="Simulation_III">
+                <img src="../images/Simulation_III.jpg" alt="Simulation_III">
                 <div class="info">
                     <h3>Simulation III, 2025</h3>
                 </div>
@@ -89,10 +89,10 @@
         </section>
 
         <section class="work-item has-gallery" 
-                data-images='["images/Simulation_II.jpg", "images/Simulation_II.I.jpg", "images/Simulation_II.II.jpg", "images/Simulation_II.III.jpg"]' 
+                data-images='["../images/Simulation_II.jpg", "../images/Simulation_II.I.jpg", "../images/Simulation_II.II.jpg", "../images/Simulation_II.III.jpg"]' 
                 data-captions='["Simulation II, 2025", "Simulation II.I, 2025", "Simulation II.II, 2025", "Simulation II.III, 2025"]'>
             <div class="frame">
-                <img src="images/Simulation_II.jpg" alt="Simulation_II">
+                <img src="../images/Simulation_II.jpg" alt="Simulation_II">
                 <div class="info">
                     <h3>Simulation II, 2025</h3>
                 </div>
@@ -103,7 +103,7 @@
 
         <section class="work-item">
             <div class="frame">
-                <img src="images/Simulation.jpg" alt="Simulation">
+                <img src="../images/Simulation.jpg" alt="Simulation">
                 <div class="info">
                     <h3>Simulation, 2025</h3>
                 </div>
@@ -111,10 +111,10 @@
         </section>
 
         <section class="work-item has-gallery" 
-                data-images='["images/Good_Thoughts.jpg", "images/Good_Thoughts_Inverse.jpg", "images/Good_Thoughts_Verse.jpg", "images/Good_Thoughts_Verse_I.jpg", "images/Good_Thoughts_Verse_II.jpg"]' 
+                data-images='["../images/Good_Thoughts.jpg", "../images/Good_Thoughts_Inverse.jpg", "../images/Good_Thoughts_Verse.jpg", "../images/Good_Thoughts_Verse_I.jpg", "../images/Good_Thoughts_Verse_II.jpg"]' 
                 data-captions='["Good Thoughts, 2018", "Good Thoughts Inverse, 2018", "Good Thoughts Verse, 2018", "Good Thoughts Verse I, 2018", "Good Thoughts Verse II, 2018"]'>
             <div class="frame">
-                <img src="images/Good_Thoughts.jpg" alt="Good_Thoughts">
+                <img src="../images/Good_Thoughts.jpg" alt="Good_Thoughts">
                 <div class="info">
                     <h3>Good Thoughts, 2018</h3>
                 </div>
@@ -129,14 +129,14 @@
     </footer>
 
     <div class="social-links">
-    <a href="https://www.instagram.com/maxmosesone" target="_blank" rel="noopener noreferrer">
-        <i class="fab fa-instagram"></i>
-    </a>
-    <a href="https://linktr.ee/maxmosesone?fbclid=PAZXh0bgNhZW0CMTEAAad2bTQij4E7bJmJhkWW0l4M9xgKVTh91W9WlkZ6QBvSur4Ix9OWcSX6vDFsxw_aem_GtbD1BEmOCTVh9CmEd-nTA" target="_blank" rel="noopener noreferrer">
-        <img src="images/linktree-logo.svg" alt="Linktree Logo" class="social-icon">
-    </a>
-</div>
+        <a href="https://www.instagram.com/maxmosesone" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://linktr.ee/maxmosesone?fbclid=PAZXh0bgNhZW0CMTEAAad2bTQij4E7bJmJhkWW0l4M9xgKVTh91W9WlkZ6QBvSur4Ix9OWcSX6vDFsxw_aem_GtbD1BEmOCTVh9CmEd-nTA" target="_blank" rel="noopener noreferrer">
+            <img src="../images/linktree-logo.svg" alt="Linktree Logo" class="social-icon">
+        </a>
+    </div>
 
-    <script src="js/scripts.js"></script>
+    <script src="../js/scripts.js"></script>
 </body>
 </html>
