--- a/index.html
+++ b/index.html
@@ -11,31 +11,31 @@
     <title>MAX MOISEEV</title>
     <!-- SEO Метатеги -->
     <meta name="description" content="Official website of Max Moiseev, a contemporary artist. Explore paintings and digital art.">
-<meta name="keywords" content="Max Moiseev, contemporary art, paintings, digital art">
-<meta name="author" content="Max Moiseev">
-<meta property="og:title" content="Max Moiseev - Contemporary Artist">
-<meta property="og:description" content="Official website of Max Moiseev. Discover paintings and digital artworks.">
-<meta property="og:image" content="https://maxmoiseev.art/images/LemonTree.jpg">
-<meta property="og:url" content="https://maxmoiseev.art/index.html">
-<meta property="og:type" content="website">
+    <meta name="keywords" content="Max Moiseev, contemporary art, paintings, digital art">
+    <meta name="author" content="Max Moiseev">
+    <meta property="og:title" content="Max Moiseev - Contemporary Artist">
+    <meta property="og:description" content="Official website of Max Moiseev. Discover paintings and digital artworks.">
+    <meta property="og:image" content="https://maxmoiseev.art/images/LemonTree.jpg">
+    <meta property="og:url" content="https://maxmoiseev.art/">
+    <meta property="og:type" content="website">
     <!-- Favicon -->
-<link rel="icon" type="image/png" href="images/logo.png" sizes="32x32">
-<!-- Apple Touch Icon (для iOS) -->
-<link rel="apple-touch-icon" href="images/logo.png">
-<!-- Microsoft Windows Tiles -->
-<meta name="msapplication-TileImage" content="images/logo.png">
+    <link rel="icon" type="image/png" href="images/logo.png" sizes="32x32">
+    <!-- Apple Touch Icon (для iOS) -->
+    <link rel="apple-touch-icon" href="images/logo.png">
+    <!-- Microsoft Windows Tiles -->
+    <meta name="msapplication-TileImage" content="images/logo.png">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="home-page">
     <!-- Шапка профиля -->
-  <header>
-    <div class="profile">
-        <h1 class="name">
-            <a href="index.html">
-                <span class="first-name">MAX MOISEEV</span><br>
-            </a>
-        </h1>
-    </div>
+    <header>
+        <div class="profile">
+            <h1 class="name">
+                <a href="/">
+                    <span class="first-name">MAX MOISEEV</span><br>
+                </a>
+            </h1>
+        </div>
         <!-- Кнопка меню (логотип) -->
         <img id="menu-toggle" src="images/logo.svg" alt="Menu" class="logo">
     </header>
@@ -43,10 +43,10 @@
     <!-- Выпадающее меню -->
     <nav id="menu" class="hidden">
         <ul>
-            <li><a href="paintings.html">PAINTINGS</a></li>
-            <li><a href="digital.html">DIGITAL</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="/paintings">PAINTINGS</a></li>
+            <li><a href="/digital">DIGITAL</a></li>
+            <li><a href="/about">ABOUT</a></li>
+            <li><a href="/contact">CONTACT</a></li>
         </ul>
     </nav>
 
@@ -57,7 +57,7 @@
                 <div class="frame">
                     <img id="slideshow-image" src="" alt="Slideshow Image">
                 </div>
-        </section>
+            </section>
         </div>
     </main>
 
@@ -66,13 +66,13 @@
     </footer>
 
     <div class="social-links">
-    <a href="https://www.instagram.com/maxmosesone" target="_blank" rel="noopener noreferrer">
-        <i class="fab fa-instagram"></i>
-    </a>
-    <a href="https://linktr.ee/maxmosesone?fbclid=PAZXh0bgNhZW0CMTEAAad2bTQij4E7bJmJhkWW0l4M9xgKVTh91W9WlkZ6QBvSur4Ix9OWcSX6vDFsxw_aem_GtbD1BEmOCTVh9CmEd-nTA" target="_blank" rel="noopener noreferrer">
-        <img src="images/linktree-logo.svg" alt="Linktree Logo" class="social-icon">
-    </a>
-</div>
+        <a href="https://www.instagram.com/maxmosesone" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://linktr.ee/maxmosesone?fbclid=PAZXh0bgNhZW0CMTEAAad2bTQij4E7bJmJhkWW0l4M9xgKVTh91W9WlkZ6QBvSur4Ix9OWcSX6vDFsxw_aem_GtbD1BEmOCTVh9CmEd-nTA" target="_blank" rel="noopener noreferrer">
+            <img src="images/linktree-logo.svg" alt="Linktree Logo" class="social-icon">
+        </a>
+    </div>
 
     <script src="js/scripts.js"></script>
 </body>
