--- a/paintings/index.html
+++ b/paintings/index.html
@@ -342,5 +342,11 @@
     </div>
 
     <script src="../js/scripts.js"></script>
+
+        <!-- Кнопка "Наверх" -->
+    <button class="scroll-to-top hidden" aria-label="Scroll to top">
+        <i class="fas fa-chevron-up"></i>
+    </button>
+    
 </body>
 </html>
