--- a/paintings/index.html
+++ b/paintings/index.html
@@ -52,10 +52,8 @@
             <div class="frame">
                 <img src="../images/WaveV.jpg" alt="Painting V">
                 <div class="info">
-                    <h3>Wave V, 2025</h3>
-                    <p>93x65 cm</p>
-                    <p>36.61x25.08 in</p>
-                    <p>acrylic on linen</p>
+                    <h3>Wave V</h3>
+                    <p>acrylic on linen, 93x65 cm, 36.61x25.08 in, 2025</p>
                     <p>450 $</p>
                     <span class="status available" data-status="available">
                     </span>
@@ -67,10 +65,8 @@
             <div class="frame">
                 <img src="../images/Wave_IV.jpg" alt="Wave_IV">
                 <div class="info">
-                    <h3>Wave IV, 2025</h3>
-                    <p>40x50 cm</p>
-                    <p>15.75x19.68 in</p>
-                    <p>acrylic on linen</p>
+                    <h3>Wave IV</h3>
+                    <p>acrylic on linen, 40x50 cm, 15.75x19.68 in, 2025</p>
                     <p>300 $</p>
                     <span class="status available" data-status="available">
                     </span>
@@ -82,10 +78,8 @@
             <div class="frame">
                 <img src="../images/Wave-III.jpg" alt="Wave-III">
                 <div class="info">
-                    <h3>Wave III, 2025</h3>
-                    <p>60x80 cm</p>
-                    <p>23.62x31.5 in</p>
-                    <p>acrylic on canvas</p>
+                    <h3>Wave III</h3>
+                    <p>acrylic on canvas, 60x80 cm, 23.62x31.5 in, 2025</p>
                     <p>430 $</p>
                     <span class="status available" data-status="available">
                     </span>
@@ -97,10 +91,8 @@
             <div class="frame">
                 <img src="../images/art1.jpg" alt="Painting 1">
                 <div class="info">
-                    <h3>Wave II, 2025</h3>
-                    <p>60x80 cm</p>
-                    <p>23.62x31.5 in</p>
-                    <p>acrylic on canvas</p>
+                    <h3>Wave II</h3>
+                    <p>acrylic on canvas, 60x80 cm, 23.62x31.5 in, 2025</p>
                     <p>430 $</p>
                     <span class="status available" data-status="available">
                     </span>
@@ -112,10 +104,8 @@
             <div class="frame">
                 <img src="../images/WaveI.jpg" alt="WaveI">
                 <div class="info">
-                    <h3>Wave I, 2025</h3>
-                    <p>40x50 cm</p>
-                    <p>15.75x19.68 in</p>
-                    <p>acrylic on canvas</p>
+                    <h3>Wave I</h3>
+                    <p>acrylic on canvas, 40x50 cm, 15.75x19.68 in, 2025</p>
                     <p>300 $</p>
                     <span class="status available" data-status="available">
                     </span>
@@ -127,10 +117,8 @@
             <div class="frame">
                 <img src="../images/art2.jpg" alt="Painting 2">
                 <div class="info">
-                    <h3>Flower, 2024</h3>
-                    <p>100x70 cm</p>
-                    <p>39.37x27.55 in</p>
-                    <p>acrylic on canvas</p>
+                    <h3>Flower</h3>
+                    <p>acrylic on canvas, 100x70 cm, 39.37x27.55 in, 2024</p>
                     <p>800 $</p>
                     <span class="status available" data-status="available">
                     </span>
@@ -143,9 +131,7 @@
                 <img src="../images/David2.jpg" alt="David2">
                 <div class="info">
                     <h3>David 2, 2024</h3>
-                    <p>26x21 cm</p>
-                    <p>10.24x8.27 in</p>
-                    <p>acrylic on cotton</p>
+                    <p>acrylic on cotton, 26x21 cm, 10.24x8.27 in, 2024</p>
                     <p>90 $</p>
                     <span class="status available" data-status="available">
                     </span>
@@ -158,9 +144,7 @@
                 <img src="../images/David.jpg" alt="David">
                 <div class="info">
                     <h3>David, 2024</h3>
-                    <p>26x21 cm</p>
-                    <p>10.24x8.27 in</p>
-                    <p>acrylic on cotton</p>
+                    <p>acrylic on cotton, 26x21 cm, 10.24x8.27 in, 2024</p>
                     <span class="status sold" data-status="sold">
                     </span>
                 </div>
@@ -171,10 +155,8 @@
             <div class="frame">
                 <img src="../images/DirtyMonk.jpg" alt="DirtyMonk">
                 <div class="info">
-                    <h3>Dirty Monk, 2024</h3>
-                    <p>20x20 cm</p>
-                    <p>7.87x7.87 in</p>
-                    <p>acrylic on canvas</p>
+                    <h3>Dirty Monk</h3>
+                    <p>acrylic on canvas, 20x20 cm, 7.87x7.87 in, 2024</p>
                     <p>75 $</p>
                     <span class="status available" data-status="available">
                     </span>
@@ -186,10 +168,8 @@
             <div class="frame">
                 <img src="../images/LemonTree.jpg" alt="LemonTree">
                 <div class="info">
-                    <h3>Lemon Tree, 2024</h3>
-                    <p>40x30 cm</p>
-                    <p>15.75x11.81 in</p>
-                    <p>acrylic on canvas</p>
+                    <h3>Lemon Tree</h3>
+                    <p>acrylic on canvas, 40x30 cm, 15.75x11.81 in, 2024</p>
                     <p>120 $</p>
                     <span class="status available" data-status="available">
                     </span>
@@ -201,10 +181,8 @@
             <div class="frame">
                 <img src="../images/Wave_3.jpg" alt="Painting 3">
                 <div class="info">
-                    <h3>Wave 3, 2024</h3>
-                    <p>100x150 cm</p>
-                    <p>39.37x59.06 in</p>
-                    <p>oil on canvas</p>
+                    <h3>Wave 3</h3>
+                    <p>oil on canvas, 100x150 cm, 39.37x59.06 in, 2024</p>
                     <p>860 $</p>
                     <span class="status available" data-status="available">
                     </span>
@@ -216,10 +194,8 @@
             <div class="frame">
                 <img src="../images/Peyote.jpg" alt="Peyote">
                 <div class="info">
-                    <h3>Peyote, 2024</h3>
-                    <p>95x93 cm</p>
-                    <p>37.4x24.8 in</p>
-                    <p>acrylic on cotton</p>
+                    <h3>Peyote</h3>
+                    <p>acrylic on cotton, 95x93 cm, 37.4x24.8 in, 2024</p>
                     <p>600 $</p>
                     <span class="status available" data-status="available">
                     </span>
@@ -231,10 +207,8 @@
             <div class="frame">
                 <img src="../images/Wave8.jpg" alt="Wave8">
                 <div class="info">
-                    <h3>Wave 8, 2023</h3>
-                    <p>95x93 cm</p>
-                    <p>37.4x24.8 in</p>
-                    <p>acrylic on cotton</p>
+                    <h3>Wave 8</h3>
+                    <p>acrylic on cotton, 95x93 cm, 37.4x24.8 in, 2023</p>
                     <span class="status sold" data-status="sold">
                     </span>
                 </div>
@@ -245,10 +219,8 @@
             <div class="frame">
                 <img src="../images/Wave4.jpg" alt="Wave4">
                 <div class="info">
-                    <h3>Wave 4, 2023</h3>
-                    <p>120x93 cm</p>
-                    <p>47.24x36.61 in</p>
-                    <p>acrylic on cotton</p>
+                    <h3>Wave 4</h3>
+                    <p>acrylic on cotton, 120x93 cm, 47.24x36.61 in, 2023</p>
                     <p>600 $</p>
                     <span class="status available" data-status="available">
                     </span>
@@ -260,10 +232,8 @@
             <div class="frame">
                 <img src="../images/D33.jpg" alt="D33">
                 <div class="info">
-                    <h3>D33, 2023</h3>
-                    <p>95x93 cm</p>
-                    <p>37.4x24.8 in</p>
-                    <p>acrylic on cotton</p>
+                    <h3>D33</h3>
+                    <p>acrylic on cotton, 95x93 cm, 37.4x24.8 in, 2023</p>
                     <span class="status sold" data-status="sold">
                     </span>
                 </div>
@@ -274,10 +244,8 @@
             <div class="frame">
                 <img src="../images/Wave7.jpg" alt="Wave7">
                 <div class="info">
-                    <h3>Wave 7, 2022</h3>
-                    <p>93x95 cm</p>
-                    <p>36.61x25.59 in</p>
-                    <p>acrylic on cotton</p>
+                    <h3>Wave 7</h3>
+                    <p>acrylic on cotton, 93x95 cm, 36.61x25.59 in, 2022</p>
                     <span class="status sold" data-status="sold">
                     </span>
                 </div>
@@ -288,10 +256,8 @@
             <div class="frame">
                 <img src="../images/Sunrise.jpg" alt="Sunrise">
                 <div class="info">
-                    <h3>Sunrise, 2022</h3>
-                    <p>95x93 cm</p>
-                    <p>37.4x24.8 in</p>
-                    <p>acrylic on cotton</p>
+                    <h3>Sunrise</h3>
+                    <p>acrylic on cotton, 95x93 cm, 37.4x24.8 in, 2022</p>
                     <p>500 $</p>
                     <span class="status available" data-status="available">
                     </span>
@@ -303,10 +269,8 @@
             <div class="frame">
                 <img src="../images/PersonalJesus.jpg" alt="Jesus">
                 <div class="info">
-                    <h3>Personal Jesus, 2022</h3>
-                    <p>63x94 cm</p>
-                    <p>28.8x37 in</p>
-                    <p>acrylic on cotton</p>
+                    <h3>Personal Jesus</h3>
+                    <p>acrylic on cotton, 63x94 cm, 28.8x37 in, 2022</p>
                     <span class="status reserved" data-status="reserved">
                     </span>
                 </div>
@@ -317,10 +281,9 @@
             <div class="frame">
                 <img src="../images/Wave1.jpg" alt="Wave1">
                 <div class="info">
-                    <h3>Wave 1, 2022</h3>
-                    <p>63x94 cm</p>
-                    <p>28.8x37 in</p>
-                    <p>acrylic on cotton</p>
+                    <h3>Wave 1</h3>
+                    <p>acrylic on cotton, 63x94 cm, 28.8x37 in, 2022</p>
+                    
                     <span class="status sold" data-status="sold">
                     </span>
                 </div>
