--- a/paintings/index.html
+++ b/paintings/index.html
@@ -130,7 +130,7 @@
             <div class="frame">
                 <img src="../images/David2.jpg" alt="David2">
                 <div class="info">
-                    <h3>David 2, 2024</h3>
+                    <h3>David 2</h3>
                     <p>acrylic on cotton, 26x21 cm, 10.24x8.27 in, 2024</p>
                     <p>90 $</p>
                     <span class="status available" data-status="available">
@@ -143,7 +143,7 @@
             <div class="frame">
                 <img src="../images/David.jpg" alt="David">
                 <div class="info">
-                    <h3>David, 2024</h3>
+                    <h3>David</h3>
                     <p>acrylic on cotton, 26x21 cm, 10.24x8.27 in, 2024</p>
                     <span class="status sold" data-status="sold">
                     </span>
