--- a/digital/index.html
+++ b/digital/index.html
@@ -44,7 +44,7 @@
     <!-- Выпадающее меню -->
     <nav id="menu" class="hidden">
         <ul>
-            <li><a href="/paintings">PAINTINGS</a></li>
+            <li><a href="/paintings/2025">PAINTINGS</a></li>
             <li><a href="/digital">DIGITAL</a></li>
             <li><a href="/about">ABOUT</a></li>
             <li><a href="/contact">CONTACT</a></li>
