--- a/digital/index.html
+++ b/digital/index.html
@@ -101,13 +101,20 @@
             <button class="next-arrow" aria-label="Next image"><i class="fas fa-angle-right"></i></button>
         </section>
 
-        <section class="work-item">
+        <section class="work-item has-gallery" 
+                data-images='["../images/Simulation.jpg", "../images/Simulation_verse.jpg"]' 
+                data-captions='["Simulation, 2025", "Simulation Verse, 2025"]'>
             <div class="frame">
-                <img src="../images/Simulation.jpg" alt="Simulation">
+                <img src="../images/Simulation.jpg" alt="Simulation_II">
                 <div class="info">
                     <h3>Simulation, 2025</h3>
                 </div>
             </div>
+            <button class="prev-arrow" aria-label="Previous image"><i class="fas fa-angle-left"></i></button>
+            <button class="next-arrow" aria-label="Next image"><i class="fas fa-angle-right"></i></button>
+        </section>
+
+        
         </section>
 
         <section class="work-item has-gallery" 
