--- a/about/index.html
+++ b/about/index.html
@@ -53,7 +53,7 @@
     <!-- Основное содержимое -->
     <main class="about">
         <section class="bio">
-            <img src="../images/profile.jpg" alt="Max Moiseev" class="profile-image">
+            <img src="../images/simbol.jpg" alt="Max Moiseev" class="profile-image">
             <div class="description">
                 <h2>About</h2>
                 <p>Maksim Moiseev (b. 1989, Mogilev, Belarus) is an abstract artist exploring the field of consciousness through painting and digital media. He graduated from Vitebsk University in 2015 and has been living and working in Batumi, Georgia, since 2022.
